<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.main.MapFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/map_llFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/main_show"
                    android:textColor="@color/KIC_blue"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"/>

                <Spinner
                    android:id="@+id/fragment_map_spinShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/fragment_map_etSearch"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:backgroundTint="@color/KIC_reseda_green_light"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/main_search"
                    android:textColor="@color/KIC_blue" />

                <EditText
                    android:id="@+id/fragment_map_etRadius"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:backgroundTint="@color/KIC_reseda_green_light"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/main_radius"
                    android:textColor="@color/KIC_blue"
                    android:visibility="gone"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/main_filter"
                    android:textColor="@color/KIC_blue"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"/>

                <Spinner
                    android:id="@+id/fragment_map_spinFilterAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_llFilters"
            app:layout_constraintBottom_toBottomOf="parent">

            <org.osmdroid.views.MapView
                android:id="@+id/map_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>