<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/KIC_off_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/KIC_reseda_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/map"
            app:titleTextColor="@color/KIC_off_white">

            <TextView
                android:id="@+id/main_tvUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:text="*user info*"
                android:textColor="@color/KIC_off_white"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:layout_marginEnd="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/main_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/kic_avatar_circle"
                    android:maxWidth="32dp"
                    android:maxHeight="32dp" />
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.Toolbar>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_vp2Pages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/main_tlTabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/main_tlTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:tabIndicatorColor="@color/KIC_reseda_green_light"
            app:tabTextColor="@color/KIC_off_white"
            android:backgroundTint="@color/KIC_reseda_green_dark"
            app:tabIndicatorHeight="4dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_tiMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_map" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_tiLeaderboards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_leaderboards" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>